--- a/index.html
+++ b/index.html
@@ -8,6 +8,233 @@
     <title>HandBike JO 2024</title>
 </head>
 <body>
-    
+    <header>
+        <img src="" alt="notre logo">
+        <nav>
+            <ul>
+                <li><a href="">ACCUEIL</a></li>
+                <li><a href="">C'EST QUOI ?</a></li>
+                <li><a href="">LE JEU</a></li>
+                <li><a href="">NOS VÉLOS</a></li>
+                <li><a href="">VISITE DU STAND</a></li>
+            </ul>
+        </nav>
+        <button>BIKE IT</button>
+    </header>
+    <main>
+        <section>
+            <div>
+                <h2>BIKE IT</h2>
+                <span></span>
+                <h2>LE SPORT POUR TOUS</h2>
+            </div>
+            <div>
+                <button>BIKE IT <img src="" alt="symbole"></button>
+                <button>VISITE DU STAND <img src="" alt="symbole"></button>
+            </div>
+            <p>Les sensations fortes du para cyclisme</p>
+        </section>
+
+        <section>
+            <div>
+                <p>Location disponible</p>
+                <div>
+                    <img src="" alt="logo checked">
+                    <h2>Nos valeurs, Notre jeu, Bike IT</h2>
+                </div>
+                <hr>
+                <p>BIKE IT est une entreprise innovante qui a pour mission de promouvoir le para cyclisme, un sport paralympique qui consiste à utiliser un vélo adapté aux personnes handicapées. Pour cela, BIKE IT a créé un jeu en réalité virtuelle qui projette son utilisateur sur un parcours de course au volant d’un handbike, un vélo à trois roues que l’on actionne avec les bras. Le jeu BIKE IT permet ainsi de faire découvrir les sensations du para cyclisme, de sensibiliser le public à cette discipline et de soutenir les athlètes paralympiques. <br> BIKE IT est une entreprise qui croit en la puissance du sport pour changer les mentalités et les vies.</p>
+            </div>
+            <div>
+                <img src="" alt="illustration 1">
+                <div>
+                    <h3>NOTRE COMMUNAUTÉ ENGAGÉ </h3>
+                    <p>Notre objectif est de créer une communauté autour de cette discipline, de susciter l’intérêt et la curiosité du public, et de faire découvrir les bienfaits du sport adapté. Nous voulons également encourager les personnes en situation de handicap à pratiquer le para cyclisme, que ce soit en réalité virtuelle ou en réalité. Nous pensons que le jeu BIKE IT est un moyen ludique et immersif de se mettre dans la peau d’un para cycliste et de vivre des sensations fortes.</p>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="illustration 2">
+                <div>
+                    <h3>LE STAND VIRTUEL</h3>
+                    <p>Nous sommes ravis de vous accueillir sur notre stand, où vous pourrez découvrir et essayer notre jeu en réalité virtuelle qui vous projette sur un parcours de course au volant d’un handbike, un vélo à trois roues que l’on actionne avec les bras. Le jeu BIKE IT vous permet de faire l’expérience du para cyclisme, de sensibiliser à cette discipline et de soutenir les athlètes paralympiques.</p>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="illustration 3">
+                <div>
+                    <h3>JEU DE SIMULATION EN REALITE VIRTUEL</h3>
+                    <p>En utilisant la technologie de la réalité virtuelle, BIKE IT vous offre une expérience immersive et ludique qui peut être partagée par tous, quelles que soient vos capacités physiques. BIKE IT est une entreprise qui croit en la puissance du sport pour changer les mentalités et les vies.</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <video src=""></video>
+            <div>
+                <p>Notre équipe d’expert</p>
+                <p>VISITEZ NOTRE STAND <br>
+                    Découvrez ET RESSENTEZ LE BIEN Être</p>
+                <hr>
+                <button>BIKE IT<img src="" alt="symbole"></button>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <div>
+                    <img src="" alt="handbike">
+                    <h3>HANDBIKE</h3>
+                    <hr>
+                </div>
+                <div>
+                    <img src="" alt="tricycle">
+                    <h3>TRICYCLE</h3>
+                    <hr>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="" alt="solo">
+                    <h3>SOLO</h3>
+                    <hr>
+                </div>
+                <div>
+                    <img src="" alt="tendem">
+                    <h3>TENDEM</h3>
+                    <hr>
+                </div>
+            </div>
+            <h2>Retours sur expérience</h2>
+            <p>Qui d’autres que nos utilisateurs pour vous parler de BIKE IT ?</p>
+            <div>
+                <div>
+                    <img src="" alt="illustration avis">
+                    <div>
+                        <div>
+                            <p>YOHAN ET MARIE</p>
+                            <img src="" alt="five star">
+                        </div>
+                        <p>J’ai découvert le jeu BIKE IT grâce à une vidéo sur YouTube et j’ai tout de suite été séduit par le concept. Je suis un passionné de cyclisme et je voulais essayer le para cyclisme en réalité virtuelle. J’ai téléchargé le jeu sur le site officiel et j’ai commencé à jouer. J’ai été bluffé par la qualité des graphismes, le réalisme des sensations et la diversité des parcours.</p>
+                        <div>
+                            <img src="" alt="logo localisation">
+                            <p>Ile de France</p>
+                            <p>lun.10 nov.2023</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="" alt="illustration avis">
+                    <div>
+                        <div>
+                            <p>YVAN </p>
+                            <img src="" alt="five star">
+                        </div>
+                        <p>J’ai toujours aimé ce sport qui me permet de me dépasser et de me sentir libre. Quand j’ai entendu parler du jeu BIKE IT, j’ai été curieuse de le tester. Je me suis inscrite à la newsletter sur le site web et j’ai reçu un lien pour télécharger le jeu. J’ai été agréablement surprise par le jeu, qui est très fidèle à la réalité.</p>
+                        <div>
+                            <img src="" alt="logo localisation">
+                            <p>Ile de France</p>
+                            <p>mar.05 déc.2023</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="" alt="illustration avis">
+                    <div>
+                        <div>
+                            <p>ALI P</p>
+                            <img src="" alt="five star">
+                        </div>
+                        <p>Je n’avais jamais fait de para cyclisme avant de jouer à BIKE IT. Je suis tombé sur une publication sur Facebook qui parlait du jeu et qui invitait à participer à un événement virtuel. J’ai trouvé l’idée intéressante et j’ai décidé de m’inscrire. J’ai téléchargé le jeu sur le site web et j’ai rejoint l’événement. J’ai été émerveillé par le jeu, qui est très immersif et captivant.</p>
+                        <div>
+                            <img src="" alt="logo localisation">
+                            <p>Ile de France</p>
+                            <p>jeu.20 fév.2022</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="reverse symbole"><img src="" alt="symbole">
+            </div>
+        </section>
+
+        <section>
+            <img src="" alt="quote">
+            <p>CETTE SENSATION DE Liberté QU’ON RESSENS AU VOLANT D’UN DE CES BIJOUX. CELA N’A PAS DE PRIX !</p>
+            <img src="" alt="quote">
+            <p>Antoine. P</p>
+            <button>VISITE DU STAND <img src="" alt="symbole"></button>
+        </section>
+    </main>
+    <footer>
+        <h2>VOS QUESTIONS CHEZ BIKE IT</h2>
+
+        <div>
+            <h3>A QUI S’ADRESSE NOS VELO ?</h3>
+            <img src="" alt="">
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
+        <hr>
+
+        <div>
+            <h3>QUELS SONT LES TARIFS DE BIKE IT</h3>
+            <img src="" alt="">
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
+        <hr>
+
+        <div>
+            <h3>C’EST QUOI LE PARA CYCLISME</h3>
+            <img src="" alt="">
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
+        <hr>
+
+        <div>
+            <h3>PLUS D’UNE SEMAINE ?</h3>
+            <img src="" alt="">
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
+        <hr>
+
+        <button>Voir toutes les questions fréquentes <img src="" alt="symbole plus"></button>
+
+        <section>
+            <div>
+                <ul>
+                    <li>BIKE IT</li>
+                    <li>LE JEU</li>
+                </ul>
+                <ul>
+                    <li>LE PARA CYCLISME</li>
+                    <li>LES VÉLOS</li>
+                    <li>HANDBIKE</li>
+                    <li>TRICYCLE</li>
+                    <li>SOLO</li>
+                    <li>TENDEM</li>
+                </ul>
+                <ul>
+                    <li>LE STAND</li>
+                    <li>VISITER NOTRE STAND</li>
+                </ul>
+                <ul>
+                    <li>BIKE IT</li>
+                    <li>LE VELO POUR TOUS</li>
+                </ul>
+                <div>
+                    <p></p>
+                    <p></p>
+                    <div>
+                        <img src="" alt="logo instagram">
+                        <img src="" alt="logo X">
+                        <img src="" alt="logo facebook">
+                        <img src="" alt="logo tiktok">
+                    </div>
+                </div>
+            </div>
+            <img src="" alt="notre logo">
+            <p>CGV | MENTIONS LEGALES</p>
+        </section>
+    </footer>
 </body>
 </html>
