img et css du header et de la premiére section de main

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-        <img src="" alt="notre logo">
+        <img src="img/logo.png" alt="notre logo">
         <nav>
             <ul>
-                <li><a href="">ACCUEIL</a></li>
+                <li><a href="" class="active">ACCUEIL</a></li>
                 <li><a href="">C'EST QUOI ?</a></li>
                 <li><a href="">LE JEU</a></li>
                 <li><a href="">NOS VÉLOS</a></li>
@@ -25,12 +25,12 @@
         <section>
             <div>
                 <h2>BIKE IT</h2>
-                <span></span>
-                <h2>LE SPORT POUR TOUS</h2>
+                <hr>
+                <h2>LE <span class="toAccentuate">SPORT POUR TOUS</span></h2>
             </div>
             <div>
-                <button>BIKE IT <img src="" alt="symbole"></button>
-                <button>VISITE DU STAND <img src="" alt="symbole"></button>
+                <button>BIKE IT <img src="img/chevron_droite.png" alt="symbole"></button>
+                <button>VISITE DU STAND <img src="img/chevron_droite.png" alt="symbole"></button>
             </div>
             <p>Les sensations fortes du para cyclisme</p>
         </section>
