html + css pour les sections 2 et 3, début js de la nav, ajout d'une video placeholder en atendent la vraie video, ajout du dossier video

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <img src="img/logo.png" alt="notre logo">
         <nav>
             <ul>
-                <li><a href="" class="active">ACCUEIL</a></li>
-                <li><a href="">C'EST QUOI ?</a></li>
-                <li><a href="">LE JEU</a></li>
-                <li><a href="">NOS VÉLOS</a></li>
-                <li><a href="">VISITE DU STAND</a></li>
+                <li><a href="#" class="navLink active">ACCUEIL</a></li>
+                <li><a href="#" class="navLink">C'EST QUOI ?</a></li>
+                <li><a href="#" class="navLink">LE JEU</a></li>
+                <li><a href="#" class="navLink">NOS VÉLOS</a></li>
+                <li><a href="#" class="navLink" >VISITE DU STAND</a></li>
             </ul>
         </nav>
         <button>BIKE IT</button>
@@ -37,30 +37,33 @@
 
         <section>
             <div>
-                <p>Location disponible</p>
+                <img src="img/illu_section_two_1.png" alt="illstration">
                 <div>
-                    <img src="" alt="logo checked">
-                    <h2>Nos valeurs, Notre jeu, Bike IT</h2>
+                    <p>Nos valeurs</p>
+                    <div>
+                        <img src="img/accent_checked.png" alt="symbole checked">
+                        <h2>Nos valeurs, Notre jeu, Bike IT</h2>
+                    </div>
+                    <hr>
+                    <p>BIKE IT est une entreprise innovante qui a pour mission de promouvoir le para cyclisme, un sport paralympique qui consiste à utiliser un vélo adapté aux personnes handicapées. Pour cela, BIKE IT a créé un jeu en réalité virtuelle qui projette son utilisateur sur un parcours de course au volant d’un handbike, un vélo à trois roues que l’on actionne avec les bras. Le jeu BIKE IT permet ainsi de faire découvrir les sensations du para cyclisme, de sensibiliser le public à cette discipline et de soutenir les athlètes paralympiques. <br> <br> BIKE IT est une entreprise qui croit en la puissance du sport pour changer les mentalités et les vies.</p>
                 </div>
-                <hr>
-                <p>BIKE IT est une entreprise innovante qui a pour mission de promouvoir le para cyclisme, un sport paralympique qui consiste à utiliser un vélo adapté aux personnes handicapées. Pour cela, BIKE IT a créé un jeu en réalité virtuelle qui projette son utilisateur sur un parcours de course au volant d’un handbike, un vélo à trois roues que l’on actionne avec les bras. Le jeu BIKE IT permet ainsi de faire découvrir les sensations du para cyclisme, de sensibiliser le public à cette discipline et de soutenir les athlètes paralympiques. <br> BIKE IT est une entreprise qui croit en la puissance du sport pour changer les mentalités et les vies.</p>
             </div>
-            <div>
-                <img src="" alt="illustration 1">
-                <div>
+            <div class="valeur" >
+                <img src="img/illu_section_two_2.png" alt="illustration 1">
+                <div id="correctifImgSize">
                     <h3>NOTRE COMMUNAUTÉ ENGAGÉ </h3>
                     <p>Notre objectif est de créer une communauté autour de cette discipline, de susciter l’intérêt et la curiosité du public, et de faire découvrir les bienfaits du sport adapté. Nous voulons également encourager les personnes en situation de handicap à pratiquer le para cyclisme, que ce soit en réalité virtuelle ou en réalité. Nous pensons que le jeu BIKE IT est un moyen ludique et immersif de se mettre dans la peau d’un para cycliste et de vivre des sensations fortes.</p>
                 </div>
             </div>
-            <div>
-                <img src="" alt="illustration 2">
+            <div class="valeur">
+                <img src="img/illu_section_two_3.png" alt="illustration 2">
                 <div>
                     <h3>LE STAND VIRTUEL</h3>
                     <p>Nous sommes ravis de vous accueillir sur notre stand, où vous pourrez découvrir et essayer notre jeu en réalité virtuelle qui vous projette sur un parcours de course au volant d’un handbike, un vélo à trois roues que l’on actionne avec les bras. Le jeu BIKE IT vous permet de faire l’expérience du para cyclisme, de sensibiliser à cette discipline et de soutenir les athlètes paralympiques.</p>
                 </div>
             </div>
-            <div>
-                <img src="" alt="illustration 3">
+            <div class="valeur">
+                <img src="img/illu_section_two_4.png" alt="illustration 3">
                 <div>
                     <h3>JEU DE SIMULATION EN REALITE VIRTUEL</h3>
                     <p>En utilisant la technologie de la réalité virtuelle, BIKE IT vous offre une expérience immersive et ludique qui peut être partagée par tous, quelles que soient vos capacités physiques. BIKE IT est une entreprise qui croit en la puissance du sport pour changer les mentalités et les vies.</p>
@@ -69,13 +72,16 @@
         </section>
 
         <section>
-            <video src=""></video>
+            <video autoplay>
+                <source src="video/Video.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+              </video>
             <div>
                 <p>Notre équipe d’expert</p>
-                <p>VISITEZ NOTRE STAND <br>
-                    Découvrez ET RESSENTEZ LE BIEN Être</p>
+                <p>VISITEZ NOTRE STAND</p>
+                <p>Découvrez ET RESSENTEZ LE BIEN ÊTRE</p>
                 <hr>
-                <button>BIKE IT<img src="" alt="symbole"></button>
+                <button>BIKE IT<img src="img/chevron_droite.png" alt="symbole"></button>
             </div>
         </section>
 
