html+css+img section quatre

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button>BIKE IT</button>
     </header>
     <main>
+        <!-- section 1 -->
         <section>
             <div>
                 <h2>BIKE IT</h2>
@@ -35,6 +36,7 @@
             <p>Les sensations fortes du para cyclisme</p>
         </section>
 
+        <!-- section 2 -->
         <section>
             <div>
                 <img src="img/illu_section_two_1.png" alt="illstration">
@@ -71,7 +73,8 @@
             </div>
         </section>
 
-        <section>
+        <!-- section 3 -->
+        <section> 
             <video autoplay>
                 <source src="video/Video.mp4" type="video/mp4">
               Your browser does not support the video tag.
@@ -85,82 +88,97 @@
             </div>
         </section>
 
+        <!-- section 4 -->
         <section>
-            <div>
-                <div>
-                    <img src="" alt="handbike">
-                    <h3>HANDBIKE</h3>
-                    <hr>
-                </div>
-                <div>
-                    <img src="" alt="tricycle">
-                    <h3>TRICYCLE</h3>
-                    <hr>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <img src="" alt="solo">
-                    <h3>SOLO</h3>
-                    <hr>
-                </div>
-                <div>
-                    <img src="" alt="tendem">
-                    <h3>TENDEM</h3>
-                    <hr>
-                </div>
-            </div>
-            <h2>Retours sur expérience</h2>
-            <p>Qui d’autres que nos utilisateurs pour vous parler de BIKE IT ?</p>
-            <div>
-                <div>
-                    <img src="" alt="illustration avis">
+            <div class="productHolder">
+                <div class="product">
                     <div>
+                        <h3>HANDBIKE</h3>
+                        <hr>
+                    </div>
+                    <img src="img/handbike.png" alt="handbike">
+                    <div class="overlay"></div>
+                </div>
+                <div class="product">
+                    <div>
+                        <h3>TRICYCLE</h3>
+                        <hr>
+                    </div>
+                    <img src="img/tricycle.png" alt="tricycle">
+                    <div class="overlay"></div>
+                </div>
+            </div>
+            <div class="productHolder">
+                <div class="product">
+                    <div>
+                        <h3>SOLO</h3>
+                        <hr>
+                    </div>
+                    <img src="img/solo.png" alt="solo">
+                    <div class="overlay"></div>
+                </div>
+                <div class="product">
+                    <div>
+                        <h3>TENDEM</h3>
+                        <hr>
+                    </div>
+                    <img src="img/tandem.png" alt="tendem">
+                    <div class="overlay"></div>
+                </div>
+            </div>
+            <div id="sectionRetour">
+                <h2>Retours sur expérience</h2>
+                <p>Qui d’autres que nos utilisateurs pour vous parler de BIKE IT ?</p>
+            </div>
+            <div id="rexs">
+                <div class="rex">
+                    <img class="imgRex" src="img/rex1.png" alt="illustration avis">
+                    <div style="position: absolute; top: 180px;">
                         <div>
                             <p>YOHAN ET MARIE</p>
-                            <img src="" alt="five star">
+                            <img src="img/stars.png" alt="five star">
                         </div>
-                        <p>J’ai découvert le jeu BIKE IT grâce à une vidéo sur YouTube et j’ai tout de suite été séduit par le concept. Je suis un passionné de cyclisme et je voulais essayer le para cyclisme en réalité virtuelle. J’ai téléchargé le jeu sur le site officiel et j’ai commencé à jouer. J’ai été bluffé par la qualité des graphismes, le réalisme des sensations et la diversité des parcours.</p>
+                        <p style="margin-bottom: 30px;">J’ai découvert le jeu BIKE IT grâce à une vidéo sur YouTube et j’ai tout de suite été séduit par le concept. Je suis un passionné de cyclisme et je voulais essayer le para cyclisme en réalité virtuelle. J’ai téléchargé le jeu sur le site officiel et j’ai commencé à jouer. J’ai été bluffé par la qualité des graphismes, le réalisme des sensations et la diversité des parcours.</p>
                         <div>
-                            <img src="" alt="logo localisation">
+                            <img src="img/location.png" alt="logo localisation">
                             <p>Ile de France</p>
                             <p>lun.10 nov.2023</p>
                         </div>
                     </div>
                 </div>
-                <div>
-                    <img src="" alt="illustration avis">
-                    <div>
+                <div class="rex">
+                    <img class="imgRex" src="img/rex2.png" alt="illustration avis">
+                    <div style="position: absolute; top: 180px;">
                         <div>
                             <p>YVAN </p>
-                            <img src="" alt="five star">
+                            <img src="img/stars.png" alt="five star">
                         </div>
-                        <p>J’ai toujours aimé ce sport qui me permet de me dépasser et de me sentir libre. Quand j’ai entendu parler du jeu BIKE IT, j’ai été curieuse de le tester. Je me suis inscrite à la newsletter sur le site web et j’ai reçu un lien pour télécharger le jeu. J’ai été agréablement surprise par le jeu, qui est très fidèle à la réalité.</p>
+                        <p style="margin-bottom: 30px;">J’ai toujours aimé ce sport qui me permet de me dépasser et de me sentir libre. Quand j’ai entendu parler du jeu BIKE IT, j’ai été curieuse de le tester. Je me suis inscrite à la newsletter sur le site web et j’ai reçu un lien pour télécharger le jeu. J’ai été agréablement surprise par le jeu, qui est très fidèle à la réalité.</p>
                         <div>
-                            <img src="" alt="logo localisation">
+                            <img src="img/location.png" alt="logo localisation">
                             <p>Ile de France</p>
                             <p>mar.05 déc.2023</p>
                         </div>
                     </div>
                 </div>
-                <div>
-                    <img src="" alt="illustration avis">
-                    <div>
+                <div class="rex">
+                    <img class="imgRex" src="img/rex3.png" alt="illustration avis">
+                    <div style="position: absolute; top: 180px;">
                         <div>
                             <p>ALI P</p>
-                            <img src="" alt="five star">
+                            <img src="img/stars.png" alt="five star">
                         </div>
-                        <p>Je n’avais jamais fait de para cyclisme avant de jouer à BIKE IT. Je suis tombé sur une publication sur Facebook qui parlait du jeu et qui invitait à participer à un événement virtuel. J’ai trouvé l’idée intéressante et j’ai décidé de m’inscrire. J’ai téléchargé le jeu sur le site web et j’ai rejoint l’événement. J’ai été émerveillé par le jeu, qui est très immersif et captivant.</p>
+                        <p style="margin-bottom: 30px;">Je n’avais jamais fait de para cyclisme avant de jouer à BIKE IT. Je suis tombé sur une publication sur Facebook qui parlait du jeu et qui invitait à participer à un événement virtuel. J’ai trouvé l’idée intéressante et j’ai décidé de m’inscrire. J’ai téléchargé le jeu sur le site web et j’ai rejoint l’événement. J’ai été émerveillé par le jeu, qui est très immersif et captivant.</p>
                         <div>
-                            <img src="" alt="logo localisation">
+                            <img src="img/location.png" alt="logo localisation">
                             <p>Ile de France</p>
                             <p>jeu.20 fév.2022</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div>
-                <img src="" alt="reverse symbole"><img src="" alt="symbole">
+            <div id="controleSlider">
+                <img src="img/chevronSliderLeft.png" alt="reverse symbole"><img src="img/chevronSliderRight.png" alt="symbole">
             </div>
         </section>
 
