html + css + img section 5

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <p>YVAN </p>
                             <img src="img/stars.png" alt="five star">
                         </div>
-                        <p style="margin-bottom: 30px;">J’ai toujours aimé ce sport qui me permet de me dépasser et de me sentir libre. Quand j’ai entendu parler du jeu BIKE IT, j’ai été curieuse de le tester. Je me suis inscrite à la newsletter sur le site web et j’ai reçu un lien pour télécharger le jeu. J’ai été agréablement surprise par le jeu, qui est très fidèle à la réalité.</p>
+                        <p style="margin-bottom: 30px;">J’ai toujours aimé ce sport qui me permet de me dépasser et de me sentir libre. Quand j’ai entendu parler du jeu BIKE IT, j’ai été curieux de le tester. Je me suis inscrit à la newsletter sur le site web et j’ai reçu un lien pour télécharger le jeu. J’ai été agréablement surpris par le jeu, qui est très fidèle à la réalité.</p>
                         <div>
                             <img src="img/location.png" alt="logo localisation">
                             <p>Ile de France</p>
@@ -183,11 +183,10 @@
         </section>
 
         <section>
-            <img src="" alt="quote">
-            <p>CETTE SENSATION DE Liberté QU’ON RESSENS AU VOLANT D’UN DE CES BIJOUX. CELA N’A PAS DE PRIX !</p>
-            <img src="" alt="quote">
+            
+            <p><img src="img/startQuote.png" alt="start quote">CETTE SENSATION DE LIBERTÉ QU’ON RESSENS AU VOLANT D’UN DE CES BIJOUX. CELA N’A PAS DE PRIX !<img src="img/endQuote.png" alt="end quote"></p>
             <p>Antoine. P</p>
-            <button>VISITE DU STAND <img src="" alt="symbole"></button>
+            <button>VISITE DU STAND <img src="img/chevron_droite.png" alt="symbole"></button>
         </section>
     </main>
     <footer>
