html + css + img pour footer + new logo + corectif html avis

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="notre logo">
+        <img class="logos" src="img/logo.png" alt="notre logo">
         <nav>
             <ul>
                 <li><a href="#" class="navLink active">ACCUEIL</a></li>
@@ -140,8 +140,7 @@
                         </div>
                         <p style="margin-bottom: 30px;">J’ai découvert le jeu BIKE IT grâce à une vidéo sur YouTube et j’ai tout de suite été séduit par le concept. Je suis un passionné de cyclisme et je voulais essayer le para cyclisme en réalité virtuelle. J’ai téléchargé le jeu sur le site officiel et j’ai commencé à jouer. J’ai été bluffé par la qualité des graphismes, le réalisme des sensations et la diversité des parcours.</p>
                         <div>
-                            <img src="img/location.png" alt="logo localisation">
-                            <p>Ile de France</p>
+                            <p><img src="img/location.png" alt="logo localisation">  Ile de France</p>
                             <p>lun.10 nov.2023</p>
                         </div>
                     </div>
@@ -155,8 +154,8 @@
                         </div>
                         <p style="margin-bottom: 30px;">J’ai toujours aimé ce sport qui me permet de me dépasser et de me sentir libre. Quand j’ai entendu parler du jeu BIKE IT, j’ai été curieux de le tester. Je me suis inscrit à la newsletter sur le site web et j’ai reçu un lien pour télécharger le jeu. J’ai été agréablement surpris par le jeu, qui est très fidèle à la réalité.</p>
                         <div>
-                            <img src="img/location.png" alt="logo localisation">
-                            <p>Ile de France</p>
+                            
+                            <p><img src="img/location.png" alt="logo localisation">  Ile de France</p>
                             <p>mar.05 déc.2023</p>
                         </div>
                     </div>
@@ -170,8 +169,8 @@
                         </div>
                         <p style="margin-bottom: 30px;">Je n’avais jamais fait de para cyclisme avant de jouer à BIKE IT. Je suis tombé sur une publication sur Facebook qui parlait du jeu et qui invitait à participer à un événement virtuel. J’ai trouvé l’idée intéressante et j’ai décidé de m’inscrire. J’ai téléchargé le jeu sur le site web et j’ai rejoint l’événement. J’ai été émerveillé par le jeu, qui est très immersif et captivant.</p>
                         <div>
-                            <img src="img/location.png" alt="logo localisation">
-                            <p>Ile de France</p>
+                            
+                            <p><img src="img/location.png" alt="logo localisation">  Ile de France</p>
                             <p>jeu.20 fév.2022</p>
                         </div>
                     </div>
@@ -192,44 +191,44 @@
     <footer>
         <h2>VOS QUESTIONS CHEZ BIKE IT</h2>
 
-        <div>
-            <h3>A QUI S’ADRESSE NOS VELO ?</h3>
-            <img src="" alt="">
+        <div class="QA">
+            <h3>A QUI S’ADRESSE NOS VÉLOS ?</h3>
+            <img src="img/chevron_droite.png" alt="symbole">
         </div>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
         <hr>
 
-        <div>
+        <div class="QA">
             <h3>QUELS SONT LES TARIFS DE BIKE IT</h3>
-            <img src="" alt="">
+            <img src="img/chevron_droite.png" alt="symbole">
         </div>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
         <hr>
 
-        <div>
+        <div class="QA">
             <h3>C’EST QUOI LE PARA CYCLISME</h3>
-            <img src="" alt="">
+            <img src="img/chevron_droite.png" alt="symbole">
         </div>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
         <hr>
 
-        <div>
+        <div class="QA">
             <h3>PLUS D’UNE SEMAINE ?</h3>
-            <img src="" alt="">
+            <img src="img/chevron_droite.png" alt="symbole">
         </div>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
         <hr>
 
-        <button>Voir toutes les questions fréquentes <img src="" alt="symbole plus"></button>
+        <button>Voir toutes les questions fréquentes <img src="img/math-plus.png" alt="symbole plus"></button>
 
         <section>
             <div>
                 <ul>
-                    <li>BIKE IT</li>
+                    <li class="toAccentuate">BIKE IT</li>
                     <li>LE JEU</li>
                 </ul>
                 <ul>
-                    <li>LE PARA CYCLISME</li>
+                    <li class="toAccentuate">LE PARA CYCLISME</li>
                     <li>LES VÉLOS</li>
                     <li>HANDBIKE</li>
                     <li>TRICYCLE</li>
@@ -237,26 +236,27 @@
                     <li>TENDEM</li>
                 </ul>
                 <ul>
-                    <li>LE STAND</li>
+                    <li class="toAccentuate">LE STAND</li>
                     <li>VISITER NOTRE STAND</li>
                 </ul>
                 <ul>
                     <li>BIKE IT</li>
                     <li>LE VELO POUR TOUS</li>
                 </ul>
-                <div>
-                    <p></p>
-                    <p></p>
+                <div id="intel">
+                    <p>CONTACT : +33 1 42 68 50 53</p>
+                    <p>Mail : Contact@bikeit.fr</p>
                     <div>
-                        <img src="" alt="logo instagram">
-                        <img src="" alt="logo X">
-                        <img src="" alt="logo facebook">
-                        <img src="" alt="logo tiktok">
+                        <img src="img/insta.png" alt="logo instagram">
+                        <img src="img/x.png" alt="logo X">
+                        <img src="img/facebook.png" alt="logo facebook">
+                        <img src="img/TikTok.png" alt="logo tiktok">
+                        <img src="img/youtube.png" alt="logo youtube">
                     </div>
                 </div>
             </div>
-            <img src="" alt="notre logo">
-            <p>CGV | MENTIONS LEGALES</p>
+            <img id="endlogo" class="logos" src="img/logo.png" alt="notre logo">
+            <p id="mention">CGV | MENTIONS LEGALES</p>
         </section>
     </footer>
 </body>
