html + js and css  for the Q&A, corect css bug for slider hover

--- a/index.html
+++ b/index.html
@@ -195,28 +195,28 @@
             <h3>A QUI S’ADRESSE NOS VÉLOS ?</h3>
             <img src="img/chevron_droite.png" alt="symbole">
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
+        <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
         <hr>
 
         <div class="QA">
             <h3>QUELS SONT LES TARIFS DE BIKE IT</h3>
             <img src="img/chevron_droite.png" alt="symbole">
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
+        <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
         <hr>
 
         <div class="QA">
             <h3>C’EST QUOI LE PARA CYCLISME</h3>
             <img src="img/chevron_droite.png" alt="symbole">
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
+        <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
         <hr>
 
         <div class="QA">
             <h3>PLUS D’UNE SEMAINE ?</h3>
             <img src="img/chevron_droite.png" alt="symbole">
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
+        <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
         <hr>
 
         <button>Voir toutes les questions fréquentes <img src="img/math-plus.png" alt="symbole plus"></button>
