functional navbar, corection in the css for better responsive pc

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <img class="logos" src="img/logo.png" alt="notre logo">
         <nav>
             <ul>
-                <li><a href="#" class="navLink active">ACCUEIL</a></li>
-                <li><a href="#" class="navLink">C'EST QUOI ?</a></li>
-                <li><a href="#" class="navLink">LE JEU</a></li>
-                <li><a href="#" class="navLink">NOS VÉLOS</a></li>
-                <li><a href="#" class="navLink" >VISITE DU STAND</a></li>
+                <li><a href="#section1" class="navLink active">ACCUEIL</a></li>
+                <li><a href="#section2" class="navLink">C'EST QUOI ?</a></li>
+                <li><a href="#section3" class="navLink">LE JEU</a></li>
+                <li><a href="#section4" class="navLink">NOS VÉLOS</a></li>
+                <li><a href="#section5" class="navLink" >VISITE DU STAND</a></li>
             </ul>
         </nav>
-        <button>BIKE IT</button>
+        <button onclick="selection()">BIKE IT</button>
     </header>
     <main>
         <!-- section 1 -->
-        <section>
+        <section id="section1">
             <div>
                 <h2>BIKE IT</h2>
                 <hr>
@@ -37,7 +37,7 @@
         </section>
 
         <!-- section 2 -->
-        <section>
+        <section id="section2">
             <div>
                 <img src="img/illu_section_two_1.png" alt="illstration">
                 <div>
@@ -74,7 +74,7 @@
         </section>
 
         <!-- section 3 -->
-        <section> 
+        <section id="section3"> 
             <video autoplay>
                 <source src="video/Video.mp4" type="video/mp4">
               Your browser does not support the video tag.
@@ -89,7 +89,7 @@
         </section>
 
         <!-- section 4 -->
-        <section>
+        <section id="section4">
             <div class="productHolder">
                 <div class="product">
                     <div>
@@ -181,7 +181,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="section5">
             
             <p><img src="img/startQuote.png" alt="start quote">CETTE SENSATION DE LIBERTÉ QU’ON RESSENS AU VOLANT D’UN DE CES BIJOUX. CELA N’A PAS DE PRIX !<img src="img/endQuote.png" alt="end quote"></p>
             <p>Antoine. P</p>
