remouved slider controler img

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 </div>
             </div>
             <div id="controleSlider">
-                <img src="img/chevronSliderLeft.png" alt="reverse symbole"><img src="img/chevronSliderRight.png" alt="symbole">
+                <!-- <img src="img/chevronSliderLeft.png" alt="reverse symbole"><img src="img/chevronSliderRight.png" alt="symbole"> -->
             </div>
         </section>
 
