add text to footer

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div id="rexs">
                 <div class="rex">
                     <img class="imgRex" src="img/rex1.png" alt="illustration avis">
-                    <div style="position: absolute; top: 180px;">
+                    <div style="position: relative; top: -90px;">
                         <div>
                             <p>YOHAN ET MARIE</p>
                             <img src="img/stars.png" alt="five star">
@@ -147,7 +147,7 @@
                 </div>
                 <div class="rex">
                     <img class="imgRex" src="img/rex2.png" alt="illustration avis">
-                    <div style="position: absolute; top: 180px;">
+                    <div style="position: relative; top: -90px;">
                         <div>
                             <p>YVAN </p>
                             <img src="img/stars.png" alt="five star">
@@ -162,7 +162,7 @@
                 </div>
                 <div class="rex">
                     <img class="imgRex" src="img/rex3.png" alt="illustration avis">
-                    <div style="position: absolute; top: 180px;">
+                    <div style="position: relative; top: -90px;">
                         <div>
                             <p>ALI P</p>
                             <img src="img/stars.png" alt="five star">
@@ -195,28 +195,30 @@
             <h3>A QUI S’ADRESSE NOS VÉLOS ?</h3>
             <img src="img/chevron_droite.png" alt="symbole">
         </div>
-        <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
+        <p class="answer">Nos vélos s'adressent à un public diversifié, allant des amateurs de jeux en réalité virtuelle aux personnes en situation de handicap. Nous ciblons ceux qui sont intéressés par la découverte du para cyclisme, que ce soit par le biais de notre jeu en réalité virtuelle ou par une participation active dans le sport adapté.
+        </p>
         <hr>
 
         <div class="QA">
             <h3>QUELS SONT LES TARIFS DE BIKE IT</h3>
             <img src="img/chevron_droite.png" alt="symbole">
         </div>
-        <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
+        <p class="answer">Les tarifs de BIKE IT dépendent de divers facteurs tels que l'accès au jeu en réalité virtuelle, les fonctionnalités incluses et les offres promotionnelles éventuelles. Nous proposons des tarifs compétitifs pour rendre notre expérience accessible au plus grand nombre. Pour obtenir des informations spécifiques sur les tarifs, nous vous invitons à visiter notre stand virtuel ou à consulter notre site Web.</p>
         <hr>
 
         <div class="QA">
             <h3>C’EST QUOI LE PARA CYCLISME</h3>
             <img src="img/chevron_droite.png" alt="symbole">
         </div>
-        <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
+        <p class="answer">Le para cyclisme est un sport paralympique passionnant qui consiste à utiliser un vélo adapté aux personnes handicapées. Dans notre cas, nous mettons en avant le handbike, un vélo à trois roues actionné avec les bras. BIKE IT vise à promouvoir cette discipline à travers un jeu en réalité virtuelle offrant une expérience immersive du para cyclisme. Notre objectif est de sensibiliser le public à cette discipline, de partager les sensations fortes qu'elle procure et de soutenir activement les athlètes paralympiques.
+        </p>
         <hr>
 
         <div class="QA">
             <h3>PLUS D’UNE SEMAINE ?</h3>
             <img src="img/chevron_droite.png" alt="symbole">
         </div>
-        <p class="answer">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, ipsum laudantium. Nam tenetur reiciendis, temporibus itaque cupiditate aperiam recusandae, fuga velit magnam minus autem, nisi odit quidem non nemo distinctio.</p>
+        <p class="answer">Si vous souhaitez profiter de notre expérience BIKE IT pendant plus d'une semaine, nous offrons des options flexibles pour prolonger l'accès au jeu en réalité virtuelle. Vous pouvez explorer différentes formules d'abonnement ou promotions spéciales pour une utilisation continue au-delà de la première semaine. N'hésitez pas à nous contacter pour discuter des options disponibles et trouver la meilleure solution correspondant à vos besoins.</p>
         <hr>
 
         <button>Voir toutes les questions fréquentes <img src="img/math-plus.png" alt="symbole plus"></button>
