--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
         <!-- section 3 -->
         <section id="section3"> 
-            <video autoplay>
-                <source src="video/Video.mp4" type="video/mp4">
+            <video autoplay controls>
+                <source src="video/Vidéo.mp4" type="video/mp4">
               Your browser does not support the video tag.
               </video>
             <div>
