display on scroll curent position

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div>
                 <p>Notre équipe d’expert</p>
                 <p>VISITEZ NOTRE STAND</p>
-                <p>Découvrez ET RESSENTEZ LE BIEN ÊTRE</p>
+                <p>DÉCOUVREZ ET RESSENTEZ LE BIEN ÊTRE</p>
                 <hr>
                 <button>BIKE IT<img src="img/chevron_droite.png" alt="symbole"></button>
             </div>
